# dogma-agent

./: .gitignore  AGENTS.md  ARCH-SPEC.md  Cargo.toml  README.md  primos.py  remembered_words.txt
dogma-v2-cli/: Cargo.toml
dogma-v2-cli/src/: config.rs  main.rs
dogma-v2-cli/src/ui/: chat.rs  input.rs  markdown.rs  mod.rs  render.rs  resize.rs  spinner.rs  status_bar.rs  tools.rs
dogma-v2-cli/tests/: e2e.rs  e2e_skills.rs  memory_stress.rs
dogma-v2-common/: Cargo.toml
dogma-v2-common/src/: error.rs  event.rs  lib.rs
dogma-v2-core/: Cargo.toml
dogma-v2-core/src/: lib.rs
dogma-v2-core/src/models/: delegation.rs  events.rs  memory.rs  mod.rs  plan.rs  skill.rs
dogma-v2-core/src/runtime/: loop_handle.rs  mod.rs  sub_agent.rs  wasm_sandbox.rs
dogma-v2-core/src/runtime/provider/: mod.rs  openai.rs
dogma-v2-core/src/state/: compressor.rs  context_manager.rs  mod.rs  session.rs  system_context.rs  user_memory.rs
dogma-v2-core/src/tools/: delegate_task.rs  execute_script.rs  mod.rs  plan.rs  read_file.rs  search_memory.rs  security.rs  skills_sh.rs  update_user_memory.rs  web_extract.rs  web_search.rs  write_file.rs
dogma-v2-core/tests/: e2e_sandbox_cli.rs  security_sandbox.rs  skills_sh_audit.rs
