[package]
name = "dogma-v2-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Dogma 2.0 — Entrypoint de control por terminal (CLI)"

[[bin]]
name = "dogma"
path = "src/main.rs"

[dependencies]
dogma-v2-common = { path = "../dogma-v2-common" }
dogma-v2-core = { path = "../dogma-v2-core" }

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Config parsing
toml.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
chrono.workspace = true

# Terminal — UI
crossterm = "0.28"
ratatui = "0.29"

[dev-dependencies]
async-trait.workspace = true
tempfile = "3"
dogma-vdb = { path = "../../dogma-vdb" }
