[package]
name = "dogma-v2-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Dogma 2.0 — Runtime asíncrono, Tool Loop, State sobre dogma-vdb y Compresor"

[dependencies]
dogma-v2-common = { path = "../dogma-v2-common" }
dogma-vdb = { workspace = true }

# Async
tokio.workspace = true
async-trait.workspace = true
futures = "0.3"

# Error handling
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# Sync
parking_lot.workspace = true

# HTTP client (LLM provider)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Utilities
uuid.workspace = true
chrono.workspace = true
regex-lite = "0.1"

[dev-dependencies]
tracing-subscriber.workspace = true
tempfile = "3"
